<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.letrinthehai.githubclient.model.User" />

        <variable
            name="view"
            type="android.view.View" />

        <variable
            name="vm"
            type="com.letrinthehai.githubclient.ui.details.DetailsViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:load_image="@{user.avatarUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circle" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.login}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="Author name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/project_link_container"
            app:layout_constraintTop_toBottomOf="@id/author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_github"
                    app:tint="@color/colorTextPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/project_link_tv"
                    android:layout_marginBottom="2dp"
                    android:text="@string/open_in_browser" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_repo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/repos_detail"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/project_link_container"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingVertical="8dp">
        </TextView>

        <TextView
            android:id="@+id/tv_follower"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/followers_detail"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/tv_repo"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingVertical="8dp">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
